рефакторинг request